--- a/poster/poster.tex
+++ b/poster/poster.tex
@@ -10,7 +10,7 @@
 \usepackage{cmbright}
 \usepackage{eso-pic}
 
-
+\tikzposterlatexaffectionproofoff
 \title{\parbox{\linewidth}{\centering \textbf{The Architecture of Alignment:Quantifying Geoeconomic Fragmentation} \\ \huge }}
 \author{Owais Mujtaba}
 \institute{CITIC | University of Granada}
