--- a/poster/poster.tex
+++ b/poster/poster.tex
@@ -11,7 +11,7 @@
 \usepackage{eso-pic}
 
 \tikzposterlatexaffectionproofoff
-\title{\parbox{\linewidth}{\centering \textbf{The Architecture of Alignment:Quantifying Geoeconomic Fragmentation} \\ \huge }}
+\title{\parbox{\linewidth}{\centering \textbf{The Architecture of Alignment:} \\ \huge Quantifying Geoeconomic Fragmentation}}
 \author{Owais Mujtaba}
 \institute{CITIC | University of Granada}
 
